[gd_scene load_steps=14 format=2]

[ext_resource path="res://prims.gd" type="Script" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://gc.gd" type="Script" id=3]
[ext_resource path="res://tile.png" type="Texture" id=4]
[ext_resource path="res://VarelaRound-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://light.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=5]
0/name = "tile.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 4 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Animation" id=6]
resource_name = "pulse"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.686275, 0.133333, 0.839216, 0.313726 ), Color( 0.686275, 0.133333, 0.839216, 0.705882 ), Color( 0.686275, 0.133333, 0.839216, 0.313726 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8.21057, 8.23515 )

[node name="main" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
color = Color( 0.345098, 0.345098, 0.345098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.301961, 0.301961, 0.301961, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="P1_Background" type="ColorRect" parent="CanvasLayer"]
margin_right = 88.0
margin_bottom = 184.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p1_container" type="Node2D" parent="CanvasLayer"]
position = Vector2( 4.08952, 0 )

[node name="p1" type="Label" parent="CanvasLayer/p1_container"]
margin_right = 88.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "Player 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="task" type="Label" parent="CanvasLayer/p1_container"]
margin_top = 32.0
margin_right = 88.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Task"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="task_text" type="Label" parent="CanvasLayer/p1_container"]
margin_top = 56.0
margin_right = 88.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
text = "Move to the trigger area"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrls" type="Label" parent="CanvasLayer/p1_container"]
margin_top = 120.0
margin_right = 88.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 1 )
text = "Controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrls_text" type="Label" parent="CanvasLayer/p1_container"]
margin_top = 144.0
margin_right = 88.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 3 )
text = "W - up, S - down"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2_Background" type="ColorRect" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -88.0
margin_bottom = 184.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p2_container" type="Node2D" parent="CanvasLayer"]
position = Vector2( 236.907, 0 )

[node name="p1" type="Label" parent="CanvasLayer/p2_container"]
margin_right = 88.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "Player 2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="task" type="Label" parent="CanvasLayer/p2_container"]
margin_top = 32.0
margin_right = 88.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Task"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="task_text" type="Label" parent="CanvasLayer/p2_container"]
margin_top = 56.0
margin_right = 88.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
text = "Move to the trigger area"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrls" type="Label" parent="CanvasLayer/p2_container"]
margin_top = 120.0
margin_right = 88.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 1 )
text = "Controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrls_text" type="Label" parent="CanvasLayer/p2_container"]
margin_top = 144.0
margin_right = 88.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 3 )
text = "left/right arrows"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prims" type="Node2D" parent="."]
position = Vector2( 88, 24 )
script = ExtResource( 1 )
tileMapPath = NodePath("TileMap")
size = Vector2( 9, 9 )
extraDoors = 3

[node name="TileMap" type="TileMap" parent="prims"]
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 65536, 0, 0, 65544, 0, 0, 131072, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131078, 0, 0, 131080, 0, 0, 196608, 0, 0, 262144, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262150, 0, 0, 327680, 0, 0, 327682, 0, 0, 393216, 0, 0, 393218, 0, 0, 393220, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 458752, 0, 0, 458754, 0, 0, 458756, 0, 0, 458760, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 113.096, 78.6817 )
collision_mask = 2

[node name="triggerArea" type="Node2D" parent="."]
position = Vector2( 208, 112 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="triggerArea"]
autoplay = "pulse"
anims/pulse = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="triggerArea"]
modulate = Color( 0.686275, 0.133333, 0.839216, 0.313726 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="triggerArea"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggerArea/Area2D"]
shape = SubResource( 7 )

[node name="Light2D" type="Light2D" parent="triggerArea"]
texture = ExtResource( 6 )
color = Color( 0.823529, 0.431373, 1, 1 )
shadow_enabled = true
[connection signal="body_entered" from="triggerArea/Area2D" to="." method="_on_Area2D_body_entered"]
